--- a/style0.css
+++ b/style0.css
@@ -35,7 +35,7 @@ height:80px;
 
 main{ 
     height:85vh;
-    background-image:url(背景圖.png);
+    background-image:url(背景圖1.png);
     background-repeat:no-repeat;
     background-size:cover;
     background-position:center;
